<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/height"
                android:text="@string/height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/heightValue"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:id="@+id/heightValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/height"
                app:layout_constraintEnd_toEndOf="parent"/>
        <SeekBar
                android:id="@+id/heightSeekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:max="30"/>

        <TextView
                android:id="@+id/width"
                android:text="@string/widthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/heightSeekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/widthValue"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:id="@+id/widthValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/heightSeekBar"
                app:layout_constraintStart_toEndOf="@id/width"
                app:layout_constraintEnd_toEndOf="parent"/>
        <SeekBar
                android:id="@+id/widthSeekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/width"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:max="30"/>

        <TextView
                android:id="@+id/mines"
                android:text="@string/mines_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/widthSeekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/minesValue"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:id="@+id/minesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/widthSeekBar"
                app:layout_constraintStart_toEndOf="@id/mines"
                app:layout_constraintEnd_toEndOf="parent"/>
        <SeekBar
                android:id="@+id/minesSeekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mines"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:max="30"/>

        <Button
                android:id="@+id/cancelButton"
                android:text="@string/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/okButton"
                app:layout_constraintTop_toBottomOf="@id/minesSeekBar"
                android:layout_marginEnd="10dp"/>
        <Button
                android:id="@+id/okButton"
                android:text="@string/ok_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/minesSeekBar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>